--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <li
                 class="hover:text-accent transition-colors cursor-pointer lg:text-2xl"
               >
-                <i class="fa-brands fa-facebook w-3 h-3"></i>
+                <i class="fa-brands fa-facebook"></i>
               </li>
               <li
                 class="hover:text-accent transition-colors cursor-pointer lg:text-2xl"
@@ -117,7 +117,9 @@
             >
           </div>
         </div>
-        <figure>
+        <figure
+          class="lg:max-w-[550px] lg:relative lg:before:absolute lg:before:content-[''] lg:before:border-[20px] lg:before:rounded lg:before:border-accent lg:before:h-96 lg:before:w-96 lg:before:-top-12 lg:before:-left-12 lg:before:-z-10 lg:z-10"
+        >
           <img src="./images/showcase.jpg" alt="" />
         </figure>
       </section>
