--- a/index.html
+++ b/index.html
@@ -125,6 +125,24 @@
       </section>
     </header>
 
+    <main>
+      <!--             Motto-->
+      <section>
+        <div>
+          <blockquote
+            cite="https://www.azquotes.com/author/8044-Martin_Luther_king_Jr/tag/brother"
+          >
+            <p>
+              We've learned to fly the air like birds, we've learned to swim the
+              seas like fish, and tet we haven't learned to walk the earth as
+              brothers and sisters.
+            </p>
+          </blockquote>
+          <p>-- Martin Luther king, Jr., <cite>Love</cite></p>
+        </div>
+      </section>
+    </main>
+
     <script src="./src/app.js"></script>
   </body>
 </html>
