--- a/index.html
+++ b/index.html
@@ -127,18 +127,24 @@
 
     <main>
       <!--             Motto-->
-      <section>
-        <div>
+      <section class="p-6 bg-secondary text-text md:p-16 2xl:rounded">
+        <div
+          class="p-2 flex flex-col gap-y-5 lg:w-3/4 lg:mx-auto lg:relative lg:after lg:after:h-2 lg:after:w-15 lg:after:-bottom-6 lg:after:left-2/4 lg:after:-translate-x-2/4"
+        >
           <blockquote
             cite="https://www.azquotes.com/author/8044-Martin_Luther_king_Jr/tag/brother"
           >
-            <p>
+            <p
+              class="before:content-['\201C'] after:content-['\201D'] text-xl text-center lg:text-2xl"
+            >
               We've learned to fly the air like birds, we've learned to swim the
               seas like fish, and tet we haven't learned to walk the earth as
               brothers and sisters.
             </p>
           </blockquote>
-          <p>-- Martin Luther king, Jr., <cite>Love</cite></p>
+          <p class="text-center font-bold">
+            -- Martin Luther king, Jr., <cite>Love</cite>
+          </p>
         </div>
       </section>
     </main>
