--- a/index.html
+++ b/index.html
@@ -147,6 +147,53 @@
           </p>
         </div>
       </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* About me -->
+      <section>
+        <div>
+          <div>
+            <div>
+              <h6>About me</h6>
+              <h2>Professinal Photographer</h2>
+            </div>
+
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Tempora corporis eveniet, doloribus impedit fuga eum accusamus
+                libero recusandae modi odio, a voluptatem necessitatibus? Eos,
+                commodi!
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Praesentium doloremque nesciunt quod sapiente voluptates? Natus
+                nihil ab illum corrupti quos?
+              </p>
+            </div>
+          </div>
+
+          <div>
+            <ul>
+              <li>
+                <i class="fa-solid fa-angles-right"></i>
+                <span>Award 1</span>
+              </li>
+              <li>
+                <i class="fa-solid fa-angles-right"></i>
+                <span>Award 2</span>
+              </li>
+              <li>
+                <i class="fa-solid fa-angles-right"></i>
+                <span>Award 3</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <figure>
+          <img src="images/about.jpg" alt="" />
+        </figure>
+      </section>
     </main>
 
     <script src="./src/app.js"></script>
