--- a/index.html
+++ b/index.html
@@ -149,12 +149,22 @@
       </section>
 
       <!-- *-*-*-*-*-*-*-*-*-*-*-*-* About me -->
-      <section>
-        <div>
-          <div>
+      <section
+        class="p-6 flex flex-col gap-10 bg-primary text-text relative md:p-16 lg:flex-row *:basis-full"
+      >
+        <div class="space-y-5 xl:self-center">
+          <div
+            class="space-y-8 *:space-y-2 lg:relative lg:after lg:after:h-5 lg:after:w-3/4 lg:after:bottom-0 lg:pb-12"
+          >
             <div>
-              <h6>About me</h6>
-              <h2>Professinal Photographer</h2>
+              <h6
+                class="text-sm pl-6 uppercase relative before before:h-1 before:w-4 before:bg-accent before:top-2/4 before:-translate-y-2/4 before:left-0 lg:text-lg"
+              >
+                About me
+              </h6>
+              <h2 class="text-2xl capitalize font-bold lg:text-3xl">
+                Professional Photographer
+              </h2>
             </div>
 
             <div>
@@ -173,25 +183,53 @@
           </div>
 
           <div>
-            <ul>
-              <li>
-                <i class="fa-solid fa-angles-right"></i>
+            <h3 class="text-lg text-accent font-semibold lg:text-xl">
+              My Awards
+            </h3>
+
+            <ul class="space-y-1">
+              <li class="space-x-2">
+                <i class="fa-solid fa-angles-right text-accent"></i>
                 <span>Award 1</span>
               </li>
-              <li>
-                <i class="fa-solid fa-angles-right"></i>
+              <li class="space-x-2">
+                <i class="fa-solid fa-angles-right text-accent"></i>
                 <span>Award 2</span>
               </li>
-              <li>
-                <i class="fa-solid fa-angles-right"></i>
+              <li class="space-x-2">
+                <i class="fa-solid fa-angles-right text-accent"></i>
                 <span>Award 3</span>
               </li>
             </ul>
           </div>
         </div>
 
-        <figure>
+        <figure class="lg:max-w-[550px]">
           <img src="images/about.jpg" alt="" />
+        </figure>
+      </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* About me -->
+      <section>
+        <figure>
+          <img src="images/gallery-1.jpg" alt="" />
+          <figcaption>Gallery Image</figcaption>
+        </figure>
+        <figure>
+          <img src="images/gallery-2.jpg" alt="" />
+          <figcaption>Gallery Image</figcaption>
+        </figure>
+        <figure>
+          <img src="images/gallery-3.jpg" alt="" />
+          <figcaption>Gallery Image</figcaption>
+        </figure>
+        <figure>
+          <img src="images/gallery-4.jpg" alt="" />
+          <figcaption>Gallery Image</figcaption>
+        </figure>
+        <figure>
+          <img src="images/gallery-5.jpg" alt="" />
+          <figcaption>Gallery Image</figcaption>
         </figure>
       </section>
     </main>
