Add responsive gallery section with Grid layout and hover effects
- Implemented gallery section with Tailwind CSS Grid for responsive layouts
- Added 5 images with dynamic column/row spans for md (2 cols, 3 rows) and lg (4 cols, 2 rows) breakpoints
- Applied :after pseudo-element with bg-accent/60 and backdrop-blur-sm for hover overlay effect
- Positioned figcaption absolutely with translate for center alignment and hover animation
- Ensured maintainable Tailwind classes by avoiding over-extraction

--- a/index.html
+++ b/index.html
@@ -209,27 +209,59 @@
         </figure>
       </section>
 
-      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* About me -->
-      <section>
-        <figure>
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* Gallery -->
+      <section
+        class="p-6 bg-secondary grid md:p-16 md:grid-cols-2 md:grid-rows-3 lg:grid-cols-4 lg:grid-rows-2"
+      >
+        <figure
+          class="md:col-span-2 md:row-span-1 lg:col-span-2 lg:row-span-2 relative after after:w-full after:h-full after:z-10 after:top-0 after:left-0 after:bg-accent/60 after:rounded after:backdropbackdrop-blur-sm after:scale-x-0 after:transition hover:after:scale-x-100 after:origin-left hover:after:origin-right group"
+        >
           <img src="images/gallery-1.jpg" alt="" />
-          <figcaption>Gallery Image</figcaption>
+          <figcaption
+            class="absolute top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4 origin-left group-hover:origin-right text-text transition z-[11] scale-x-0 group-hover:scale-x-100 lg:font-bold xl:text-xl"
+          >
+            Gallery Image
+          </figcaption>
         </figure>
-        <figure>
+        <figure
+          class="relative after after:w-full after:h-full after:z-10 after:top-0 after:left-0 after:bg-accent/60 after:rounded after:backdropbackdrop-blur-sm after:scale-x-0 after:transition hover:after:scale-x-100 after:origin-left hover:after:origin-right group"
+        >
           <img src="images/gallery-2.jpg" alt="" />
-          <figcaption>Gallery Image</figcaption>
+          <figcaption
+            class="absolute top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4 origin-left group-hover:origin-right text-text transition z-[11] scale-x-0 group-hover:scale-x-100 lg:font-bold xl:text-xl"
+          >
+            Gallery Image
+          </figcaption>
         </figure>
-        <figure>
+        <figure
+          class="relative after after:w-full after:h-full after:z-10 after:top-0 after:left-0 after:bg-accent/60 after:rounded after:backdropbackdrop-blur-sm after:scale-x-0 after:transition hover:after:scale-x-100 after:origin-left hover:after:origin-right group"
+        >
           <img src="images/gallery-3.jpg" alt="" />
-          <figcaption>Gallery Image</figcaption>
+          <figcaption
+            class="absolute top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4 origin-left group-hover:origin-right text-text transition z-[11] scale-x-0 group-hover:scale-x-100 lg:font-bold xl:text-xl"
+          >
+            Gallery Image
+          </figcaption>
         </figure>
-        <figure>
+        <figure
+          class="relative after after:w-full after:h-full after:z-10 after:top-0 after:left-0 after:bg-accent/60 after:rounded after:backdropbackdrop-blur-sm after:scale-x-0 after:transition hover:after:scale-x-100 after:origin-left hover:after:origin-right group"
+        >
           <img src="images/gallery-4.jpg" alt="" />
-          <figcaption>Gallery Image</figcaption>
+          <figcaption
+            class="absolute top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4 origin-left group-hover:origin-right text-text transition z-[11] scale-x-0 group-hover:scale-x-100 lg:font-bold xl:text-xl"
+          >
+            Gallery Image
+          </figcaption>
         </figure>
-        <figure>
+        <figure
+          class="relative after after:w-full after:h-full after:z-10 after:top-0 after:left-0 after:bg-accent/60 after:rounded after:backdropbackdrop-blur-sm after:scale-x-0 after:transition hover:after:scale-x-100 after:origin-left hover:after:origin-right group"
+        >
           <img src="images/gallery-5.jpg" alt="" />
-          <figcaption>Gallery Image</figcaption>
+          <figcaption
+            class="absolute top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4 origin-left group-hover:origin-right text-text transition z-[11] scale-x-0 group-hover:scale-x-100 lg:font-bold xl:text-xl"
+          >
+            Gallery Image
+          </figcaption>
         </figure>
       </section>
     </main>
