Add responsive about section with Flexbox and skill bars
- Implemented about section with Flexbox for vertical stacking on all screen sizes
- Applied consistent Tailwind styles for h6 and h2, with unstyled paragraphs
- Added lg:flex-row-reverse to swap image and text order on 1024px and larger
- Styled skill bars with :before pseudo-elements for dynamic width (80-95%) and rounded appearance
- Adjusted padding (p-6, md:p-16), gap (gap-y-10, xl:gap-y-8), and text centering (xl:self-center) for responsive design
- Ensured mobile-first approach with minimal styles for smaller screens

--- a/index.html
+++ b/index.html
@@ -264,6 +264,79 @@
           </figcaption>
         </figure>
       </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* Skills -->
+      <section
+        class="p-6 flex flex-col gap-y-10 bg-primary text-text md:p-16 lg:gap-x-10 lg:flex-row-reverse *:basis-full"
+      >
+        <div class="space-y-5 lg:self-center xl:space-y-10">
+          <div class="space-y-2">
+            <h6
+              class="text-sm pl-6 uppercase relative before before:h-1 before:w-4 before:bg-accent before:top-2/4 before:-translate-y-2/4 before:left-0 lg:text-lg"
+            >
+              My Skills
+            </h6>
+            <h2 class="text-2xl capitalize font-bold lg:text-3xl">
+              I am experienced in the following fields
+            </h2>
+          </div>
+
+          <div class="space-y-2">
+            <p>
+              Lorem ipsum dolor recusandae modi odio, a voluptatem Eos, commodi!
+            </p>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium doloremque nesciunt
+            </p>
+          </div>
+
+          <div class="space-y-5 xl:space-y-8 *:space-y-2">
+            <div>
+              <h5 class="font-bold text-accent">Photography</h5>
+              <div
+                class="h-6 w-full rounded-full bg-secondary relative before before:top-0 before:left-0 before:h-6 before:w-[95%] before:rounded-full z-10 before:-z-10 pl-4"
+              >
+                95%
+              </div>
+            </div>
+
+            <div>
+              <h5 class="font-bold text-accent">Design Thinking</h5>
+              <div
+                class="h-6 w-full rounded-full bg-secondary relative before before:top-0 before:left-0 before:h-6 before:w-[92%] before:rounded-full z-10 before:-z-10 pl-4"
+              >
+                92%
+              </div>
+            </div>
+
+            <div>
+              <h5 class="font-bold text-accent">Videography</h5>
+              <div
+                class="h-6 w-full rounded-full bg-secondary relative before before:top-0 before:left-0 before:h-6 before:w-[87%] before:rounded-full z-10 before:-z-10 pl-4"
+              >
+                87%
+              </div>
+            </div>
+
+            <div>
+              <h5 class="font-bold text-accent">Social Innovation</h5>
+              <div
+                class="h-6 w-full rounded-full bg-secondary relative before before:top-0 before:left-0 before:h-6 before:w-[85%] before:rounded-full z-10 before:-z-10 pl-4"
+              >
+                85%
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <figure
+          class="lg:max-w-[550px] xl:relative xl:before xl:before:top-0 xl:before:left-0 xl:before:h-full xl:before:w-5 xl:pl-20"
+        >
+          <img src="./images/skills.jpg" alt="" />
+        </figure>
+      </section>
     </main>
 
     <script src="./src/app.js"></script>
