feat: add main homepage sections (Portfolio, Services, Testimonials, News, Contact & Footer form)

--- a/index.html
+++ b/index.html
@@ -337,6 +337,404 @@
           <img src="./images/skills.jpg" alt="" />
         </figure>
       </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* Portfolio -->
+      <section
+        class="p-6 flex flex-col gap-y-10 bg-secondary text-text lg:gap-x-10 lg:flex-row-reverse *:basis-full md:p-16 2xl:rounded"
+      >
+        <div class="space-y-5 *:space-y-2 lg:self-center xl:space-y-10">
+          <div>
+            <h6
+              class="text-sm pl-6 uppercase relative before before:h-1 before:w-4 before:bg-accent before:top-2/4 before:-translate-y-2/4 before:left-0 lg:text-lg"
+            >
+              My Portfolio
+            </h6>
+            <h2 class="text-2xl capitalize font-bold lg:text-3xl">
+              Recent Works
+            </h2>
+          </div>
+
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora
+              corporis eveniet, doloribus impedit fuga eum accusamus libero
+              recusandae modi odio, a voluptatem necessitatibus? Eos, commodi!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium doloremque nesciunt quod sapiente voluptates? Natus
+              nihil ab illum corrupti quos?
+            </p>
+          </div>
+        </div>
+
+        <div class="grid gap-y-5 md:grid-cols-12 md:grid-rows-12 md:gap-0">
+          <figure
+            class="md:col-start-1 md:col-end-9 md:row-start-1 md:row-end-11 md:transition-all md:hover:scale-110 md:grayscale md:hover:grayscale-0"
+          >
+            <img src="images/portfolio-1.jpg" alt="" />
+          </figure>
+
+          <figure
+            class="md:col-start-7 md:-col-end-1 md:row-start-3 md:-row-end-1 md:transition-transform md:hover:scale-110"
+          >
+            <img src="images/portfolio-2.jpg" alt="" />
+          </figure>
+        </div>
+      </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* Services -->
+
+      <section
+        class="p-6 flex flex-col gap-y-10 bg-primary text-text lg:gap-x-10 lg:flex-row-reverse *:basis-full md:p-16"
+      >
+        <div class="space-y-5 *:space-y-2 lg:self-center xl:space-y-10">
+          <div>
+            <h6
+              class="text-sm pl-6 uppercase relative before before:h-1 before:w-4 before:bg-accent before:top-2/4 before:-translate-y-2/4 before:left-0 lg:text-lg"
+            >
+              why choose me
+            </h6>
+            <h2 class="text-2xl capitalize font-bold lg:text-3xl">
+              Best Services for you
+            </h2>
+          </div>
+
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia,
+              doloribus!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Laboriosam, voluptatem.
+            </p>
+          </div>
+
+          <div>
+            <a
+              href="#"
+              class="inline-block uppercase p-2 border-2 border-accent self-start text-xs rounded sm:text-base sm:px-4"
+              >Learn More</a
+            >
+          </div>
+        </div>
+
+        <div
+          class="grid gap-5 *:flex *:flex-col *:gap-y-5 *:items-center *:border-2 *:border-accent *:rounded *:p-8 sm:grid-cols-2"
+        >
+          <div class="text-center">
+            <figure class="h-28">
+              <img src="images/service-1.png" alt="" />
+            </figure>
+
+            <h5 class="text-xl text-accent">Wedding</h5>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur.</p>
+          </div>
+
+          <div>
+            <figure class="h-28">
+              <img src="images/service-2.png" alt="" />
+            </figure>
+
+            <h5 class="text-xl text-accent">Company Profile</h5>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur.</p>
+          </div>
+
+          <div>
+            <figure class="h-28">
+              <img src="images/service-3.png" alt="" />
+            </figure>
+
+            <h5 class="text-xl text-accent">Model Photoshoot</h5>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur.</p>
+          </div>
+
+          <div>
+            <figure class="h-28">
+              <img src="images/service-4.png" alt="" />
+            </figure>
+
+            <h5 class="text-xl text-accent">Videography</h5>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* Testimonials -->
+      <section
+        class="p-6 flex flex-col gap-y-10 bg-secondary text-text lg:gap-x-10 lg:flex-row-reverse *:basis-full md:p-16 2xl:rounded"
+      >
+        <div
+          class="flex flex-col gap-y-5 xl:gap-y-10 *:space-y-2 lg:self-center"
+        >
+          <div>
+            <h6
+              class="text-sm pl-6 uppercase relative before before:h-1 before:w-4 before:bg-accent before:top-2/4 before:-translate-y-2/4 before:left-0 lg:text-lg"
+            >
+              why choose me
+            </h6>
+            <h2 class="text-2xl capitalize font-bold lg:text-3xl">
+              Best Services for you
+            </h2>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam
+            deleniti nulla cupiditate et. At consectetur nulla, nemo non
+            inventore ducimus?
+          </p>
+
+          <div>
+            <a
+              href="#"
+              class="inline-block uppercase p-2 border-2 border-accent self-start text-xs rounded sm:text-base sm:px-4"
+              >VIEW TESTIMONIALS</a
+            >
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-y-5">
+          <figure class="h-8 self-end">
+            <img src="images/testimonial-quote.png" alt="" />
+          </figure>
+
+          <p
+            class="p-8 text-primary border-2 border-transparent rounded after after:bg-accent after:h-full after:w-full relative after:top-0 after:left-0 after:rounded after:-z-[1] z-[1] after:scale-y-100 hover:after:scale-y-0 after:transition-transform hover:text-text hover:border-accent hover:border-2"
+          >
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed vitae
+            natus sunt eaque adipisci ea hic modi explicabo sapiente
+            consequuntur aperiam totam saepe voluptatum, soluta impedit earum
+            quos eum tempora. Similique, officiis. Dolores dolore modi quae
+            tenetur, fuga qui officiis.
+          </p>
+
+          <div class="grid grid-cols-2 grid-rows-2 self-start">
+            <figure
+              class="row-span-2 p-2 border-4 border-accent rounded-full animate-bounce mt-5"
+            >
+              <img
+                src="images/client.jpg"
+                alt=""
+                class="size-28 rounded-full object-top"
+              />
+            </figure>
+
+            <h6 class="self-end ml-4 text-accent">Jane Doe</h6>
+            <p class="ml-4 mt-1">CEO at XYZ</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* News -->
+
+      <section
+        class="p-6 flex flex-col gap-y-10 bg-primary text-text md:p-16 lg:gap-x-10 lg:flex-row-reverse *:basis-full"
+      >
+        <div
+          class="flex flex-col gap-y-5 lg:self-center xl:gap-y-10 *:space-y-2"
+        >
+          <div>
+            <h6
+              class="text-sm pl-6 uppercase relative before before:h-1 before:w-4 before:bg-accent before:top-2/4 before:-left-0 lg:text-lg"
+            >
+              news
+            </h6>
+            <h2 class="text-2xl capitalize font-bold lg:text-3xl">
+              Across the world of Photography
+            </h2>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+            velit voluptates assumenda sapiente provident unde debitis tenetur
+            reiciendis at ipsum!
+          </p>
+
+          <a
+            href="#"
+            class="uppercase p-2 border-2 border-accent self-start text-xs rounded inline-block sm:text-lg sm:px-4"
+            >View News</a
+          >
+        </div>
+
+        <div
+          class="grid gap-y-5 sm:grid-cols-2 sm:grid-rows-[min-content] sm:gap-x-5"
+        >
+          <div
+            class="grid sm:grid-rows-subgrid sm:row-span-5 gap-y-4 p-6 rounded bg-secondary shadow-lg shadow-primary border-t-2 border-accent"
+          >
+            <figure>
+              <img src="images/news-1.jpg" alt="" />
+            </figure>
+            <h3 class="font-bold text-xl">Model Photoshoot</h3>
+            <h6 class="text-accent">Dec 24, 2027</h6>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+              aliquam magni officia, ex cum magnam?
+            </p>
+            <a
+              href="#"
+              class="uppercase justify-self-start px-6 py-2 border-2 border-accent self-start rounded flex items-center group lg:text-sm"
+              ><span>Read More</span>
+              <i
+                class="fa-solid fa-angles-right text-accent ml-2 group-hover:translate-x-2 transition-transform"
+              ></i
+            ></a>
+          </div>
+          <div
+            class="grid sm:grid-rows-subgrid sm:row-span-5 gap-y-4 p-6 rounded bg-secondary shadow-lg shadow-primary border-t-2 border-accent"
+          >
+            <figure>
+              <img src="images/news-2.jpg" alt="" class="object-[60%]" />
+            </figure>
+            <h3 class="font-bold text-xl">Company Profile</h3>
+            <h6 class="text-accent">jan 24, 2028</h6>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+              aliquam magni officia, ex cum magnam?
+            </p>
+            <a
+              href="#"
+              class="uppercase justify-self-start px-6 py-2 border-2 border-accent self-start rounded flex items-center group lg:text-sm"
+              ><span>Read More</span>
+              <i
+                class="fa-solid fa-angles-right text-accent ml-2 group-hover:translate-x-2 transition-transform"
+              ></i
+            ></a>
+          </div>
+        </div>
+      </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* contact -->
+
+      <section
+        class="p-6 flex flex-col gap-y-10 bg-secondary text-text lg:gap-x-10 lg:flex-row *:basis-full md:p-16 2xl:rounded"
+      >
+        <div
+          class="flex flex-col gap-y-5 lg:self-center xl:gap-y-10 *:space-y-2"
+        >
+          <div>
+            <h6
+              class="text-sm pl-6 uppercase relative before before:h-1 before:w-4 before:bg-accent before:top-2/4 before:-left-0 lg:text-lg"
+            >
+              let's talk
+            </h6>
+            <h2 class="text-2xl capitalize font-bold lg:text-3xl">
+              keep In Touch
+            </h2>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
+            dignissimos quod veniam pariatur asperiores, vero velit facere
+            vitae! Adipisci, reprehenderit.
+          </p>
+          <a
+            class="uppercase p-2 border-2 border-accent self-start text-xs rounded inline-block sm:text-lg sm:px-4"
+            href="#"
+            >Let's Chat</a
+          >
+        </div>
+
+        <figure class="lg:max-w-[550px]">
+          <img src="images/contact.jpg" alt="" />
+        </figure>
+      </section>
+
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*-* Contact Form -->
+      <footer
+        class="p-6 flex flex-col gap-y-10 bg-primary text-text md:p-16 lg:gap-x-10 lg:flex-row *:basis-full"
+      >
+        <div class="flex flex-col gap-y-5">
+          <figure>
+            <img src="images/form.jpg" alt="" />
+          </figure>
+
+          <form
+            class="grid flex-col gap-y-2 *:px-4 *:py-2 *:rounded *:outline-none h-full"
+          >
+            <input
+              type="text"
+              placeholder="Name"
+              class="bg-accent text-text placeholder:text-text/80 h-12 sm:h-16"
+            />
+            <input
+              class="bg-accent text-text placeholder:text-text/80 h-12 sm:h-16"
+              type="email"
+              placeholder="Email"
+            />
+            <textarea
+              class="bg-accent text-text placeholder:text-text/80 h-48 lg:h-full"
+              placeholder="Message"
+            ></textarea>
+            <input
+              class="border-2 border-accent text-text cursor-pointer h-12 sm:h-16"
+              type="submit"
+              value="Submit"
+            />
+          </form>
+        </div>
+
+        <div
+          class="flex flex-col gap-y-5 lg:self-center xl:gap-y-10 *:space-y-2"
+        >
+          <div>
+            <h6
+              class="text-sm pl-6 uppercase relative before before:h-1 before:w-4 before:bg-accent before:top-2/4 before:-left-0 lg:text-lg"
+            >
+              let's talk
+            </h6>
+            <h2 class="text-2xl capitalize font-bold lg:text-3xl">
+              keep In Touch
+            </h2>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+            quod nihil voluptates possimus sunt rerum illo debitis, assumenda
+            minima aliquid.
+          </p>
+
+          <div class="grid gap-5 sm:grid-cols-2 lg:grid-cols-1 xl:grid-cols-22">
+            <div class="grid grid-cols-[112px_1fr] grid-rows-2 gap-x-5 gap-y-2">
+              <figure class="row-span-2">
+                <img class="w-28" src="images/contact-icon-1.png" alt="" />
+              </figure>
+
+              <h6 class="self-end text-accent">Phone Number</h6>
+              <p>123-234-1234</p>
+            </div>
+
+            <div class="grid grid-cols-[112px_1fr] grid-rows-2 gap-x-5 gap-y-2">
+              <figure class="row-span-2">
+                <img class="w-28" src="images/contact-icon-2.png" alt="" />
+              </figure>
+
+              <h6 class="self-end text-accent">Email address</h6>
+              <p>cool@cool.com</p>
+            </div>
+
+            <div class="grid grid-cols-[112px_1fr] grid-rows-2 gap-x-5 gap-y-2">
+              <figure class="row-span-2">
+                <img class="w-28" src="images/contact-icon-3.png" alt="" />
+              </figure>
+
+              <h6 class="self-end text-accent">Websites</h6>
+              <p>www.cool.com</p>
+            </div>
+
+            <div class="grid grid-cols-[112px_1fr] grid-rows-2 gap-x-5 gap-y-2">
+              <figure class="row-span-2">
+                <img class="w-28" src="images/contact-icon-4.png" alt="" />
+              </figure>
+
+              <h6 class="self-end text-accent">Address</h6>
+              <p>177A Bleecker Street, NY</p>
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
 
     <script src="./src/app.js"></script>
